--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-appdirs==1.4.4
-distlib==0.3.1
-filelock==3.0.12
+click==7.1.2
+dnspython==2.0.0
+Flask==1.1.2
+Flask-PyMongo==2.3.0
 gunicorn==20.0.4
-importlib-metadata==1.7.0
-six==1.15.0
-virtualenv==20.0.31
-zipp==3.1.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+pymongo==3.11.0
+Werkzeug==1.0.1
